--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FC Pollestres</title>
+    <title>FC Pollestres - Accueil</title>
     <meta name="description" content="Lorem ispum.">
     <link rel="stylesheet" href="/dist/css/main.css">
 </head>
 <body>
   <h1>FC Pollestres</h1>
+
+  <ul>
+      <li><a href="automatisation-fb/index.html">Rédiger un post Facebook</a></li>
+  </ul>
 
 </body>
 </html>
