--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FC Pollestres - Accueil</title>
     <meta name="description" content="Lorem ispum.">
-    <link rel="stylesheet" href="/dist/css/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
-  <h1>FC Pollestres</h1>
+  <div class="container">
+      <h1>FC Pollestres</h1>
 
-  <ul>
-      <li><a href="automatisation-fb/index.html">Rédiger un post Facebook</a></li>
-  </ul>
+      <ul>
+          <li><a href="pages/automatisation-fb/index.html">Rédiger un post Facebook</a></li>
+      </ul>
+  </div>
 
 </body>
 </html>
