--- a/pages/automatisation-fb/index.html
+++ b/pages/automatisation-fb/index.html
@@ -250,7 +250,7 @@
 
     </div><br /><br /><br />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../../src/js/vendor/jquery-3.5.1.min.js"></script>
     <script src="../../src/js/auto-publish.js"></script>
 
 </body>
