--- a/pages/automatisation-fb/index.html
+++ b/pages/automatisation-fb/index.html
@@ -10,6 +10,12 @@
 <body>
     <div class="container">
         <h1>Publications Facebook FC Pollestres</h1>
+        
+        <div class="row">
+            <div class="six columns">
+                <p class="toast toast--error">Veuillez remplir tous les champs !</p>
+            </div>
+        </div>
 
         <div class="row">
             <div class="six columns">
